Fixed an issue on mobile number dropdown

--- a/client/vite-project/src/pages/SignIn/signin.css
+++ b/client/vite-project/src/pages/SignIn/signin.css
@@ -160,7 +160,6 @@ button{
 }
 
 .sigin-mobile-dropdown{
-    width: 40%;
     border: none;
     background-color: #141724;
     border: 1px solid gray;
@@ -182,6 +181,10 @@ button{
     .sign-in-logo{
         margin: 0px 168px 24px;
     }
+
+    .sigin-mobile-dropdown{
+        width: 40%;
+    }
 }
 @media  (min-width:768px) and (max-width:1023px) {
     .sign-in-wrapper{
@@ -191,6 +194,9 @@ button{
 
     .sign-in-logo{
         margin: 0px 168px 24px;
+    }
+    .sigin-mobile-dropdown{
+        width: 40%;
     }
 }
 
@@ -207,6 +213,10 @@ button{
     .sign-in-logo{
         margin: 0px 156.5px 24px;
     }
+
+    .sigin-mobile-dropdown{
+        width: 60%;
+    }
 }
 
 @media  (min-width: 375px) and (max-width: 424px) {
@@ -217,6 +227,10 @@ button{
 
     .sign-in-logo{
         margin: 0px 131.5px 24px;
+    }
+
+    .sigin-mobile-dropdown{
+        width: 60%;
     }
 }
 
@@ -231,4 +245,7 @@ button{
     }
 
 
+    .sigin-mobile-dropdown{
+        width: 60%;
+    }
 }
